assembly/test/failing/other/multiple_byte_defines.asm
message db "Hello world !"
message db "Another hello world !"